--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -13,3 +13,15 @@ html {
   max-width: 98rem;
   margin: 0 auto;
 }
+
+.flex {
+  display: flex;
+}
+
+.sb {
+  justify-content: space-between;
+}
+
+.aac {
+  align-items: center;
+}
