--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -3,6 +3,8 @@ $color-paragraphs: #404756;
 $color-lavender: #d3d4ed;
 $color-brown: #fbf1e6;
 $color-pink: #fddbe2;
+$color-white: #fff;
+$color-dark-pink: #f7859c;
 
 $font-main: Montserrat, sans-serif;
 $font-second: "Open Sans", sans-serif;
