--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -16,4 +16,10 @@
 }
 
 .btn {
+  text-decoration: none;
+  color: $color-white;
+  display: inline-block;
+  background-color: $color-dark-pink;
+  border-radius: 1.2rem;
+  padding: 0.8rem 2.7rem;
 }
