--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -25,3 +25,24 @@ html {
 .aac {
   align-items: center;
 }
+
+.circle {
+  position: absolute;
+  top: -1.2rem;
+  left: -1.7rem;
+  width: 3.4rem;
+  height: 3.6rem;
+  z-index: -10;
+}
+
+.relative {
+  position: relative;
+}
+
+.margin-auto {
+  margin: 0 auto;
+}
+
+.absolute {
+  position: absolute;
+}
