style: add btn hover

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -5,6 +5,7 @@ $color-brown: #fbf1e6;
 $color-pink: #fddbe2;
 $color-white: #fff;
 $color-dark-pink: #f7859c;
+$color-hover-pink: #ff6685;
 
 $font-main: Montserrat, sans-serif;
 $font-second: "Open Sans", sans-serif;
