--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -17,6 +17,7 @@ body {
 .menu-text {
   font-family: $font-second;
   width: fit-content;
+  z-index: 20;
 }
 
 .paragraphs {
@@ -33,4 +34,9 @@ body {
 .subtitle {
   font-size: 2.4rem;
   line-height: 2.2rem;
+}
+
+.h3 {
+  font-size: 3.6rem;
+  line-height: 3.2rem;
 }
