--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -57,3 +57,13 @@
     margin-bottom: 2.8rem;
   }
 }
+
+.content-section {
+  background-color: $color-brown;
+  padding-top: 14rem;
+
+  &__text {
+    z-index: 100;
+    position: relative;
+  }
+}
