style: rarity component

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -61,6 +61,7 @@
 .content-section {
   background-color: $color-brown;
   padding-top: 14rem;
+  padding-bottom: 6.7rem;
 
   &__text {
     z-index: 100;
