--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -55,3 +55,15 @@ html {
 .tac {
   text-align: center;
 }
+
+.wave {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+
+  &--content {
+    top: 100%;
+    left: 0;
+  }
+}
