--- a/src/scss/components/_roadmap-item.scss
+++ b/src/scss/components/_roadmap-item.scss
@@ -18,4 +18,28 @@
   &__h3 {
     padding: 0.9rem 0 2.3rem;
   }
+  &__pattern {
+    top: -3%;
+    right: -28%;
+  }
+
+  &__first-girl {
+    top: 0;
+    right: -46%;
+  }
+
+  &__pattern-2 {
+    top: 50%;
+    right: -50%;
+  }
+
+  &__girl-2 {
+    top: 15%;
+    right: -50%;
+  }
+
+  &__couple {
+    top: 5%;
+    right: -59%;
+  }
 }
