--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -40,3 +40,9 @@ body {
   font-size: 3.6rem;
   line-height: 3.2rem;
 }
+
+.questions {
+  font-weight: 400;
+  font-size: 2.4rem;
+  line-height: 2.2rem;
+}
