--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -12,6 +12,9 @@ html {
 .container {
   max-width: 98rem;
   margin: 0 auto;
+  @media only screen and (max-width: $bp-medium) {
+    overflow-x: hidden;
+  }
 }
 
 .flex {
@@ -33,6 +36,11 @@ html {
   width: 3.4rem;
   height: 3.6rem;
   z-index: 1;
+
+  &--main {
+    left: 43.5%;
+    transform: translate(-50%, 0);
+  }
 
   &--center {
     left: 45.5%;
