--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -2,16 +2,16 @@ body {
   font-family: $font-main;
   font-style: normal;
   font-weight: 700;
-  font-size: 1.8rem;
+  font-size: 1.25vw;
   color: $color-main-text;
-  line-height: 2.5rem;
+  line-height: 140%;
 }
 
 .h1 {
-  font-size: 9.7rem;
-  line-height: 8.7rem;
+  font-size: 6.5vw; //9.7rem;
+  line-height: 90%;
   text-align: center;
-  padding-bottom: 4.5rem;
+  padding-bottom: 3.13vw;
   z-index: 100;
 }
 
@@ -28,22 +28,22 @@ body {
 }
 
 .h2 {
-  font-size: 6.5rem;
-  line-height: 5.8rem;
+  font-size: 4.51vw;
+  line-height: 90%;
 }
 
 .subtitle {
-  font-size: 2.4rem;
-  line-height: 2.2rem;
+  font-size: 1.67vw;
+  line-height: 92%;
 }
 
 .h3 {
-  font-size: 3.6rem;
-  line-height: 3.2rem;
+  font-size: 2.5vw;
+  line-height: 89%;
 }
 
 .questions {
   font-weight: 400;
-  font-size: 2.4rem;
-  line-height: 2.2rem;
+  font-size: 1.67vw;
+  line-height: 92%;
 }
