--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -9,32 +9,42 @@
     margin: auto;
   }
 
+  /*  &__img-box-1 {
+    width: 25vw;
+  } */
+
   &__circle-left {
     left: 0;
-    top: 29%;
+    top: 15vw;
     z-index: -10;
+    width: 35vw;
   }
   &__hero-left {
-    left: 4%;
-    top: 18%;
+    left: 4vw;
+    top: 10vw;
+    width: 24vw;
   }
   &__pattern-left {
-    left: 20%;
-    top: -2rem;
+    left: 19vw;
+    top: -1.5vw;
+    width: 17vw;
   }
   &__circle-right {
-    right: 7%;
-    top: 6%;
+    right: 4vw;
+    top: 5vw;
     z-index: -10;
+    width: 34vw;
   }
   &__hero-right {
-    right: 5%;
-    top: 17%;
+    right: 5vw;
+    top: 11vw;
+    width: 24vw;
   }
   &__pattern-right {
-    right: 23%;
-    top: 46%;
+    right: 23vw;
+    top: 24vw;
     z-index: -9;
+    width: 17vw;
   }
 }
 
