--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -2,9 +2,18 @@ body {
   font-family: $font-main;
   font-style: normal;
   font-weight: 700;
-  font-size: 1.25vw;
+  font-size: 1.6rem;
   color: $color-main-text;
   line-height: 140%;
+  @media only screen and (max-width: $bp-tablet) {
+    font-size: 1.5rem;
+  }
+  @media only screen and (max-width: $bp-mobile) {
+    font-size: 1.4rem;
+  }
+  @media only screen and (max-width: $bp-smallest) {
+    font-size: 1.3rem;
+  }
 }
 
 .h1 {
@@ -28,22 +37,25 @@ body {
 }
 
 .h2 {
-  font-size: 4.51vw;
+  font-size: 6.5rem;
   line-height: 90%;
+  @media only screen and (max-width: $bp-tablet) {
+    font-size: 4.5rem;
+  }
 }
 
 .subtitle {
-  font-size: 1.67vw;
+  font-size: 2.4rem;
   line-height: 92%;
 }
 
 .h3 {
-  font-size: 2.5vw;
+  font-size: 3.6rem;
   line-height: 89%;
 }
 
 .questions {
   font-weight: 400;
-  font-size: 1.67vw;
+  font-size: 2.4rem;
   line-height: 92%;
 }
