--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -102,14 +102,14 @@
 }
 
 .roadmap {
-  padding-top: 26rem;
-  padding-bottom: 11.3rem;
+  padding-top: 18.06vw;
+  padding-bottom: 7.85vw;
 }
 
 .team-section {
   background-color: $color-pink;
-  padding-top: 13.9rem;
-  padding-bottom: 12rem;
+  padding-top: 9.65vw;
+  padding-bottom: 8.33vw;
 
   &__text {
   }
@@ -123,6 +123,6 @@
   }
 
   &__space {
-    padding: 4.8rem 0 6.8rem;
+    padding: 3.33vw 0 4.72vw;
   }
 }
