--- a/src/scss/components/_roadmap-item.scss
+++ b/src/scss/components/_roadmap-item.scss
@@ -45,11 +45,11 @@
 }
 
 .faq {
-  padding: 21rem 0 12rem;
+  padding: 14.58vw 0 8.33vw;
 
   &__questions {
-    padding-top: 6.8rem;
-    padding-bottom: 12rem;
+    padding-top: 4.72vw;
+    padding-bottom: 8.33vw;
   }
   &__box {
     display: flex;
