style: add adaptive

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -13,7 +13,7 @@ $font-second: "Open Sans", sans-serif;
 //Adaptive
 $bp-largest: 90em; //
 $bp-large: 83.75em; //
-$bp-big: 77.5em; //
+$bp-menu: 43em; //688
 $bp-medium: 64em; // 1024px
 $bp-tablet: 48em; // 768px
 $bp-mobile: 26.6em; // 425px
