--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -12,7 +12,7 @@ body {
     font-size: 1.4rem;
   }
   @media only screen and (max-width: $bp-smallest) {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
   }
 }
 
@@ -52,6 +52,9 @@ body {
 .h3 {
   font-size: 3.6rem;
   line-height: 89%;
+  @media only screen and (max-width: $bp-mobile-small) {
+    font-size: 3rem;
+  }
 }
 
 .questions {
