--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -3,6 +3,10 @@ html {
   font-size: 62.5%; //16px = 100% always. Allow  user to change font size
 }
 
+.wrap {
+  overflow-x: hidden;
+}
+
 .line {
   width: 100%;
   height: 1px;
@@ -12,9 +16,6 @@ html {
 .container {
   max-width: 98rem;
   margin: 0 auto;
-  @media only screen and (max-width: $bp-medium) {
-    overflow-x: hidden;
-  }
 }
 
 .flex {
