--- a/src/scss/components/_rarity.scss
+++ b/src/scss/components/_rarity.scss
@@ -24,11 +24,11 @@
     flex-direction: column;
     flex-wrap: wrap;
     @media only screen and (max-width: $bp-tablet) {
-      max-width: 50%;
+      max-width: 70%;
       margin-left: 8%;
     }
     @media only screen and (max-width: $bp-mobile-small) {
-      max-width: 50%;
+      max-width: 70%;
       margin-left: 0;
     }
   }
@@ -48,33 +48,20 @@
 
   &__img {
     @media only screen and (max-width: $bp-mobile) {
-      position: absolute;
-      left: 10%;
-      width: 100%;
+      width: auto;
+      height: 200px;
+      max-width: none;
     }
   }
   &__image {
     @media only screen and (max-width: $bp-mobile) {
+      margin-right: -80px;
     }
-
     @media only screen and (max-width: $bp-medium) {
     }
     @media only screen and (max-width: $bp-tablet) {
     }
-    @media only screen and (max-width: $bp-mobile) {
-      width: 100%;
-      position: absolute;
-      left: 65%;
-      top: 10%;
-      width: 48%;
-    }
     @media only screen and (max-width: $bp-mobile-small) {
-      top: 20%;
-      width: 48%;
-    }
-    @media only screen and (max-width: $bp-mobile-small) {
-      top: 20%;
-      width: 58%;
     }
   }
 }
