--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -144,6 +144,8 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    //min-width: 33%;
+    padding-top: 5rem;
   }
   &__position {
     padding: 2.48rem 0 0.6rem;
