style: add adaptive

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -16,6 +16,8 @@ $bp-large: 83.75em; //
 $bp-menu: 43em; //688
 $bp-medium: 64em; // 1024px
 $bp-tablet: 48em; // 768px
+$bp-team: 55em; // 883px
+$bp-footer-menu: 35em; // 555px
 $bp-mobile: 26.6em; // 425px
 $bp-mobile-small: 23.4em; // 375px
 $bp-smallest: 20; // 320px */
