--- a/src/scss/components/_rarity.scss
+++ b/src/scss/components/_rarity.scss
@@ -41,8 +41,8 @@
   }
 
   &__rate-img {
-    width: 1.18vw;
-    height: 1.25vw;
+    width: 1.7rem;
+    height: 1.8rem;
     display: inline;
   }
 
