--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -45,6 +45,10 @@ html {
   &--main {
     left: 43.5%;
     transform: translate(-50%, 0);
+    @media only screen and (max-width: $bp-mobile) {
+      top: -1.8rem;
+      left: 41%;
+    }
   }
 
   &--center {
@@ -101,4 +105,8 @@ html {
 
 .wrapper {
   padding: 0 1.5rem;
+}
+
+.animation {
+  animation: move-from-top 0.6s linear;
 }
