--- a/src/scss/components/_roadmap-item.scss
+++ b/src/scss/components/_roadmap-item.scss
@@ -9,7 +9,11 @@
     margin: 7.55rem auto 8.7rem;
     height: 40.7rem;
     @media only screen and (max-width: $bp-mobile) {
-      margin: 5.55rem auto 6.7rem;
+      margin: 4.55rem auto 5.7rem;
+      width: 47rem;
+    }
+    @media only screen and (max-width: $bp-mobile-small) {
+      margin: 4.55rem auto 5.7rem;
       height: 30.7rem;
       width: 46rem;
     }
@@ -17,7 +21,13 @@
   &__text {
     width: 36rem;
     @media only screen and (max-width: $bp-mobile) {
+      width: 27rem;
+    }
+    @media only screen and (max-width: $bp-mobile-small) {
       width: 30rem;
+    }
+    @media only screen and (max-width: $bp-smallest) {
+      width: 26rem;
     }
   }
 
@@ -30,12 +40,13 @@
     }
     @media only screen and (max-width: $bp-mobile) {
       width: 87%;
+      left: 3%;
     }
     @media only screen and (max-width: $bp-mobile-small) {
-      width: 83%;
+      width: 84%;
     }
     @media only screen and (max-width: $bp-smallest) {
-      width: 20%;
+      width: 40%;
     }
   }
 
@@ -63,6 +74,7 @@
     @media only screen and (max-width: $bp-mobile) {
       display: none;
     }
+    animation: move-from-left-huge 1s linear;
   }
 
   &__pattern-2 {
@@ -96,68 +108,5 @@
     @media only screen and (max-width: $bp-mobile) {
       display: none;
     }
-  }
-}
-
-.faq {
-  padding: 14.58vw 1.5rem 8.33vw;
-
-  &__questions {
-    padding-top: 4.72vw;
-  }
-  &__box {
-    display: flex;
-    padding: 3rem 0 3.7rem;
-    justify-content: space-between;
-    flex-direction: column;
-  }
-  &__question {
-  }
-
-  &__body {
-    font-size: 2rem;
-    padding: 2.5rem 0;
-    display: none;
-    &--open {
-      display: flex;
-      //faq__body--open
-    }
-  }
-
-  &__header {
-    display: flex;
-    align-items: center;
-
-    &:hover,
-    &:active {
-      cursor: pointer;
-    }
-  }
-  &__plus-box {
-    position: relative;
-    margin-left: auto;
-    width: 13px;
-    height: 13px;
-  }
-  &__plus-vertical-line {
-    position: absolute;
-    width: 3px;
-    height: 13px;
-    background-color: $color-main-text;
-    left: 5.4px;
-    top: 0;
-    &--open {
-      transform: rotate(-90deg);
-      transition: all 0.3s;
-      //faq__plus-vertical-line--open
-    }
-  }
-  &__plus-horizontal-line {
-    position: absolute;
-    width: 13px;
-    height: 3px;
-    background-color: $color-main-text;
-    top: 5px;
-    left: 0;
   }
 }
